test/good/strings/format04.px

print "'{1/2, [[false]]}\""
