test/bad/basic/bool01.px

if true, false do
    skip
elif 'x', "" do
    skip

while 1, 2, 3 do
    skip

until [], null do
    skip
